# solid-nlp-service

./: .dockerignore  .env.original  .pdm-python  .pre-commit-config.yaml  COMPARISON-DOC.md  Dockerfile  README  README.md  Readme.md  config.ini  config.py  detection.py  docker-compose.yaml  docker-compose.yml  docker-composy.yml  genres.py  logging_config.py  main.py  pyproject.toml  requirements.txt  send_q.py  system_prompt.txt  tasks.py  utils.py
app/: __main__.py  config.py  schemas.py
app/services/messaging/: __init__.py  error_broker.py  result_broker.py
app/services/news_labeling/: __init__.py  base.py  openai.py
app/workers/: __init__.py  base_worker.py  openai_worker.py  utils.py
baselines/: baseline_llm.ipynb
tokenizers-analize/: toenizers.ipynb
