[project]
name = "solid-nlp-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikhail Makarov", email = "vallome@yandex.ru"},
]
dependencies = ["numpy>=2.2.3", "pandas>=2.2.3", "pymystem3>=0.2.0", "spacy>=3.8.4"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
